// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-14 v-padding-8 uui-placeholder-colored"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="5"
    step="any"
    tabIndex={0}
    type="number"
    value=""
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`NumericInput should be rendered correctly with new props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-24 mode-cell"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-12 v-padding-2 alignRight uui-placeholder-colored"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="5"
    step="any"
    tabIndex={0}
    type="number"
    value=""
  />
</div>
`;
